crates/ic-lint/tests/snapshots/default_type_mismatch__struct_field_type_mismatch.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
assertion_line: 205
expression: test_lint_hir(source)
---
⨯: string value cannot be assigned to type int64
  @ test.idl:8:15

  7 │ struct Bad {
  8 │     @default({"ten", 30})
    │               ˆˆˆˆˆ incompatible types
  9 │     Duration my_duration;
 10 │ };
