crates/ic-lint/tests/snapshots/default_type_mismatch__typedef_const_in_collection_mismatch.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `sequence`
  @ test.idl:7:14

 6 │ struct Bad {
 7 │     @default(NUMBERS) sequence<short> values;
   │              ˆˆˆˆˆˆˆ incompatible default value
 8 │ };
