crates/ic-lint/tests/snapshots/default_type_mismatch__unbounded_string_const_on_bounded_member.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `string<5>`
  @ test.idl:5:14

 4 │ struct Bad {
 5 │     @default(TEXT) string<5> value;
   │              ˆˆˆˆ incompatible default value
 6 │ };
