crates/ic-lint/tests/snapshots/default_type_mismatch__wide_string_const_on_string_member.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `string`
  @ test.idl:5:14

 4 │ struct Bad {
 5 │     @default(TEXT) string value;
   │              ˆˆˆˆ incompatible default value
 6 │ };
