crates/ic-lint/tests/snapshots/default_type_mismatch__wrong_enum_value.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `Color`
  @ test.idl:6:14

 5 │ struct Bad {
 6 │     @default(SMALL)
   │              ˆˆˆˆˆ incompatible default value
 7 │     Color my_color;
 8 │ };
